--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,7 @@
-#MainNav {
-	background-color: rgb(148, 190, 214);
-	border: 2px solid rgb(17, 69, 136);
+.DataBackGround {
+ 	background-color: rgb(210, 237, 252);
 }
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
+ 
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
