--- a/src/UI/ContactModal/ContactBackdrop.css
+++ b/src/UI/ContactModal/ContactBackdrop.css
@@ -1,9 +1,9 @@
-.Backdrop {
+.ContactBackdrop {
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: 100;
   left: 0;
 	top: 0;
-	background-color: rgba(180, 253, 213, 0.096);
+	background-color: aliceblue;
 }
