--- a/src/Companies/CompaniesList/CompaniesList.css
+++ b/src/Companies/CompaniesList/CompaniesList.css
@@ -4,23 +4,31 @@
 	font-size: .8em;
 }
 
-.Form {
-  float: left;
-  text-align: left;
-  padding: 15px;
-  width: 60%;
-  height: 100%;
-  color: rgb(75, 67, 67);
-  font-family: 'Open Sans', sans-serif;
+th {
+	background-color: gray;
+	color: white;
+	font-size: 12pt;
+}
+
+td {
+	line-height: 20px;
+}
+
+tr:nth-last-of-type(even)	 {
+	background-color: aliceblue;
+}
+
+tr:nth-last-of-type(odd)	 {
+	background-color: rgb(220, 224, 229);
+}
+
+.rowButton {
+	width: 20px;
 }
 
 .companyHover:hover {
 	font-style: italic;
 	font-weight: 900;
-}
-
-.tableRow {
-	line-height: 10px;
 }
 
 .Danger:hover {
@@ -33,19 +41,6 @@
 
 .Success:hover {
   background-color: rgb(92, 243, 150);
-}
-
-.FormInstructions {
-  font-style: italic;
-  font-weight: 600;
-}
-
-th {
-    width: 3%;
-}
-
-td {
-    width: 10%;
 }
 
 .false {
