--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,85 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+	font-family: sans-serif;
+	font-weight: 200;
+}
+
+
+.Card {
+  float: left;
+  text-align: left;
+  padding: 15px;
+  width: 60%;
+  height: 100%;
+	color: rgb(75, 67, 67);
+	background-color: rgb(212, 226, 238);
+	font-family: 'Open Sans', sans-serif;
+}
+
+.FormInstructions {
+  font-style: italic;
+  font-weight: 600;
+}
+
+.Form {
+  float: left;
+  text-align: left;
+  padding: 15px;
+  width: 60%;
+  height: 100%;
+  color: rgb(75, 67, 67);
+	font-family: 'Open Sans', sans-serif;
+}
+
+th {
+	background-color: gray;
+	color: white;
+	font-size: 12pt;
+}
+
+td {
+	line-height: 20px;
+}
+
+tr:nth-last-of-type(even)	 {
+	background-color: aliceblue;
+}
+
+tr:nth-last-of-type(odd)	 {
+	background-color: rgb(220, 224, 229);
+}
+
+.rowButton {
+	width: 20px;
+}
+
+.contactHover:hover {
+	font-style: italic;
+	font-weight: 900;
+}
+
+.companyHover:hover {
+	font-style: italic;
+	font-weight: 900;
+}
+
+.Danger:hover {
+  background-color: rgb(238, 84, 84);
+}
+
+.Edit:hover {
+  background-color: rgb(250, 233, 77);
+}
+
+.Success:hover {
+  background-color: rgb(92, 243, 150);
+}
+
+.false {
+  color: rgb(238, 84, 84);
+}
+
+.true {
+  color: rgb(21, 199, 89);
 }
